# Distributed-Storage-Engine

./: .env  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
db/: init.sql
nginx/: master_nginx.conf
src/client/: DSEClient.cpp  DSEClient.hpp  main.cpp
src/client/cli/: CLI.cpp  CLI.hpp
src/client/crypto/: ICryptoEngine.hpp  OpenSSLCryptoEngine.cpp  OpenSSLCryptoEngine.hpp
src/client/file/: IFileSlicer.hpp  LocalFileSlicer.cpp  LocalFileSlicer.hpp
src/client/network/: IMetaDataClient.hpp  ITransferManager.hpp  MasterHttpClient.cpp  MasterHttpClient.hpp  ParallelTransferManager.cpp  ParallelTransferManager.hpp
src/client/state/: ILocalStateManager.hpp  LocalStateManager.cpp  LocalStateManager.hpp
src/common/: Semaphore.hpp  crypto.hpp  models.hpp
src/master/: IMetadataRepository.hpp  MasterServer.hpp  PostgresRepository.hpp  main.cpp
src/worker/: IStorageBackend.hpp  LocalDiskStorage.hpp  WorkerServer.hpp  main.cpp
tests/: main.py
